--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
     <meta property="og:description" content="{{site.description}}">
     <meta property="fb:admins" content="elotroalex"/>
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}"/>
+    <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}{{page.filename}}"/>
     <meta property="fb:app_id" content="589495744558280"/>
     <meta property="og:image" content="{{site.url}}{{site.baseurl}}/public/open-graph-logo.png"/>
     <meta property="og:image:width" content="200" />
