--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -5,5 +5,9 @@ layout: default
 <div class="narrative">
   <h1 class="post-title">{{ page.title }}</h1>
   <p class="citation"> by {{ page.author }}</p>
-  {{ content }}
+  {{ content | lod_ids | lod_labels }}
 </div>
+
+{{ page | lod_mentions }}
+
+{{ page | lod_references }}
