--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <!-- Canonical link to help search engines -->
-  <link rel="canonical" href="{{ site.baseurl }}{{ page.url }}"/>
+  <link rel="canonical" href="{{ site.baseurl }}{{ page.url }}index.html"/>
 
   <!-- Basic meta elements -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -22,10 +22,8 @@
     {% if page.layout == "default" %}
     <meta property="og:title" content="{{page.title}}"/>
     <meta property="og:description" content="{{site.description}}">
-    <meta property="fb:admins" content="elotroalex"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}{{page.filename}}"/>
-    <meta property="fb:app_id" content="589495744558280"/>
     <meta property="og:image" content="{{site.url}}{{site.baseurl}}/public/open-graph-logo.png"/>
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
@@ -33,10 +31,8 @@
     {% else %}
     <meta property="og:title" content="{{page.title}}"/>
     <meta property="og:description" content="An Ed edition">
-    <meta property="fb:admins" content="elotroalex"/>
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}"/>
-    <meta property="fb:app_id" content="589495744558280"/>
+    <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}index.html"/>
     <meta property="og:image" content="{{site.url}}{{site.baseurl}}/public/open-graph-logo.png"/>
     <meta property="og:image:width" content="200" />
     <meta property="og:image:height" content="200" />
