--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,29 +10,36 @@
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
+    <a class="sidebar-nav-item" href="https://via.hypothes.is/{{ site.url }}{{ site.baseurl }}{{ page.url }}">Annotate me</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
       `layout: page` in the front-matter. See readme for usage.
     {% endcomment %}
 
+    <span class="sidebar-nav-item">Contents</span>    
+    {% assign pages_list = site.texts | sort:"url" %}
+    {% for node in pages_list %}
+      {% if node.title != null %}
+        {% if node.layout == "chapter" %}
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">Chapter {{ node.chapter }}</a>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+
+    <span class="sidebar-nav-item">Explore</span>    
     {% assign pages_list = site.pages | sort:"url" %}
     {% for node in pages_list %}
       {% if node.title != null %}
-        {% if node.layout == "page" %}
+        {% if node.layout == "entities" %}
           <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
         {% endif %}
       {% endif %}
     {% endfor %}
 
     <!-- The code below is used for manually entered links  -->
-
-    <a class="sidebar-nav-item" href="https://via.hypothes.is/{{ site.url }}{{ site.baseurl }}{{ page.url }}">Annotate me</a>
-    <a class="sidebar-nav-item" href="https://github.com/elotroalex/ed" target="_blank">GitHub project</a>
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+    <span class="sidebar-nav-item">More information</span> 
+    <a class="sidebar-nav-item" href="https://github.com/wragge/lodbook-ed" target="_blank">Code on GitHub</a>
   </nav>
 
-  <div class="sidebar-item">
-    <p>Distributed with an MIT license.</p>
-  </div>
 </div>
